.provarCaches/00D410000011HE0EAM/objects/rstk__pjwkb__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_pjwkb</customHelpPage>
    <description>pjwkb__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__pjwkb_proj_master__r.rstk__externalid__c</formula>
        <inlineHelpText>This is an internal system field used to define the external ID of a record, which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__pjwkb_proj_master__r.Name</formula>
        <inlineHelpText>Internal formula for constructing the associated name field, which is an internal system field, not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record, which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_actothdirect__c</fullName>
        <formula>rstk__pjwkb_cost_odc_indirect__c +  rstk__pjwkb_cost_odc_misc__c +  rstk__pjwkb_cost_odc_service__c +  rstk__pjwkb_cost_odc_travel__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Actual for Other Indirect Charges for this Project</inlineHelpText>
        <label>Other Direct, Actual Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_actprodrevenue__c</fullName>
        <formula>rstk__pjwkb_proj__r.rstk__pjprojcst_actprodrevenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Actual Product Revenue for this Project</inlineHelpText>
        <label>Revenue, Actual Product</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_actservrevenue__c</fullName>
        <formula>rstk__pjwkb_proj__r.rstk__pjprojcst_actservrevenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Actual Service Revenue for this Project</inlineHelpText>
        <label>Revenue, Actual Service</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_acttotrevenue__c</fullName>
        <formula>rstk__pjwkb_proj__r.rstk__pjprojcst_acttotlrevenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Actual Total Revenue for this Project</inlineHelpText>
        <label>Revenue, Actual Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_budget_odc_freight__c</fullName>
        <formula>rstk__pjwkb_proj__r.rstk__pjprojcst_bacfodc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Budget for Freight ODC Cost for this Project</inlineHelpText>
        <label>ODC Budget, Freight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_budget_odc_indirect__c</fullName>
        <formula>rstk__pjwkb_proj__r.rstk__pjprojcst_baciodc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Budget for Indirect ODC Cost for this Project</inlineHelpText>
        <label>ODC Budget, Indirect</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_budget_odc_misc__c</fullName>
        <formula>rstk__pjwkb_proj__r.rstk__pjprojcst_bacmodc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Budget for Miscellaneous ODC Costs for this Project</inlineHelpText>
        <label>ODC Budget, Misc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_budget_odc_service__c</fullName>
        <formula>rstk__pjwkb_proj__r.rstk__pjprojcst_bacsodc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Budget for Service ODC Cost for this Project</inlineHelpText>
        <label>ODC Budget, Service</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_budget_odc_tax__c</fullName>
        <formula>rstk__pjwkb_proj__r.rstk__pjprojcst_bactodc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Budget for Tax ODC Cost for this Project</inlineHelpText>
        <label>ODC Budget, Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_budget_odc_travel__c</fullName>
        <formula>rstk__pjwkb_proj__r.rstk__pjprojcst_baclodc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Budget for Travel ODC Cost for this Project</inlineHelpText>
        <label>ODC Budget, Travel</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_budget_odc_var__c</fullName>
        <formula>rstk__pjwkb_proj__r.rstk__pjprojcst_bacvodc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Variance (Actual minus Budget) of Other Direct Charges Cost for this Project</inlineHelpText>
        <label>ODC Budget, Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_budget_ohd_fringe__c</fullName>
        <formula>rstk__pjwkb_proj__r.rstk__pjprojcst_bacohdfrng__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Budget for Overhead Fringe Cost for this Project</inlineHelpText>
        <label>Ohd Budget, Fringe</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_budget_ohd_lab__c</fullName>
        <formula>rstk__pjwkb_proj__r.rstk__pjprojcst_bacohdlab__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Budget for Overhead Labor Cost for this Project</inlineHelpText>
        <label>Ohd Budget, Lab</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_budget_ohd_label__c</fullName>
        <inlineHelpText>This is the Budget for Overhead Costs for this Project</inlineHelpText>
        <label>Budget, Ohd</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_budget_ohd_mach__c</fullName>
        <formula>rstk__pjwkb_proj__r.rstk__pjprojcst_bacohdmach__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Budget for Overhead Machine Cost for this Project</inlineHelpText>
        <label>Ohd Budget, Mach</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_budget_ohd_mtl__c</fullName>
        <formula>rstk__pjwkb_proj__r.rstk__pjprojcst_bacohdmtl__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Budget for Overhead Material Costs for this Project</inlineHelpText>
        <label>Ohd Budget, Mtl</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_budget_sub_lab__c</fullName>
        <formula>rstk__pjwkb_proj__r.rstk__pjprojcst_bacsublab__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Budget for Subcontracted Material Cost for this Project</inlineHelpText>
        <label>Sub Budget, Lab</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_budget_sub_label__c</fullName>
        <inlineHelpText>This is the Budget for Subcontracted Costs for this Project</inlineHelpText>
        <label>Budget, Subcontract</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_budget_sub_mtl__c</fullName>
        <formula>rstk__pjwkb_proj__r.rstk__pjprojcst_bacsubmtl__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Budget for Subcontracted Material Cost for this Project</inlineHelpText>
        <label>Sub Budget, Mtl</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_budget_subtot__c</fullName>
        <formula>rstk__pjwkb_proj__r.rstk__pjprojcst_budget_subtot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Total Budget Cost for this Project</inlineHelpText>
        <label>Subtotal, Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_budget_subtot_lab__c</fullName>
        <formula>rstk__pjwkb_proj__r.rstk__pjprojcst_baclab__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Budget for Labor Costs for this Project</inlineHelpText>
        <label>Budget Labor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_budget_subtot_label__c</fullName>
        <inlineHelpText>This is the Total Budget Cost for this Project</inlineHelpText>
        <label>Budget, Sub-Total</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_budget_subtot_mtl__c</fullName>
        <formula>rstk__pjwkb_proj__r.rstk__pjprojcst_bacmtl__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Budget for Material Costs for this Project</inlineHelpText>
        <label>Budget Material</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_budget_subtot_odc__c</fullName>
        <formula>rstk__pjwkb_budget_odc_freight__c + rstk__pjwkb_budget_odc_indirect__c + rstk__pjwkb_budget_odc_service__c + rstk__pjwkb_budget_odc_tax__c + rstk__pjwkb_budget_odc_travel__c + rstk__pjwkb_budget_odc_var__c + rstk__pjwkb_budget_odc_misc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Budget for Other Direct Charge Costs for this Project</inlineHelpText>
        <label>Budget ODC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_budget_subtot_ohd__c</fullName>
        <formula>rstk__pjwkb_budget_ohd_mtl__c + rstk__pjwkb_budget_ohd_lab__c + rstk__pjwkb_budget_ohd_fringe__c + rstk__pjwkb_budget_ohd_mach__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Budget for Overhead for this Project</inlineHelpText>
        <label>Budget Overhead</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_budget_subtot_sub__c</fullName>
        <formula>rstk__pjwkb_budget_sub_mtl__c + rstk__pjwkb_budget_sub_lab__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Budget for Subcontracted Costs for this Project</inlineHelpText>
        <label>Budget Subcontract</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_budget_tot__c</fullName>
        <formula>rstk__pjwkb_budget_subtot_mtl__c + rstk__pjwkb_budget_subtot_lab__c + rstk__pjwkb_budget_subtot_ohd__c + rstk__pjwkb_budget_subtot_sub__c + rstk__pjwkb_budget_subtot_odc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Total Budget for this Project</inlineHelpText>
        <label>Total Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_budothdirect__c</fullName>
        <formula>rstk__pjwkb_budget_odc_indirect__c +  rstk__pjwkb_budget_odc_misc__c +  rstk__pjwkb_budget_odc_service__c +  rstk__pjwkb_budget_odc_travel__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Budget for Other Indirect Charges for this Project</inlineHelpText>
        <label>Other Direct, Budget Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_budprodrevenue__c</fullName>
        <formula>rstk__pjwkb_proj__r.rstk__pjprojcst_budprodrevenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Product Revenue Budget for this Project</inlineHelpText>
        <label>Revenue, Budget Product</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_budservrevenue__c</fullName>
        <formula>rstk__pjwkb_proj__r.rstk__pjprojcst_budservrevenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Service Revenue Budget for this Project</inlineHelpText>
        <label>Revenue, Budget Service</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_budtotrevenue__c</fullName>
        <formula>rstk__pjwkb_proj__r.rstk__pjprojcst_budtotrevenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Budget for Total Revenue for this Project</inlineHelpText>
        <label>Revenue, Budget Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_cost_odc_indirect__c</fullName>
        <formula>rstk__pjwkb_proj__r.rstk__pjprojcst_totcstiodc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Actual Indirect ODC Cost for this Project</inlineHelpText>
        <label>ODC Cost, Indirect</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_cost_odc_misc__c</fullName>
        <formula>rstk__pjwkb_proj__r.rstk__pjprojcst_totcstmodc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Actual Miscellaneous ODC Cost for this Project</inlineHelpText>
        <label>ODC Cost, Misc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_cost_odc_service__c</fullName>
        <formula>rstk__pjwkb_proj__r.rstk__pjprojcst_totcstsodc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Actual Service ODC Cost for this Project</inlineHelpText>
        <label>ODC Cost, Service</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_cost_odc_travel__c</fullName>
        <formula>rstk__pjwkb_proj__r.rstk__pjprojcst_totcstlodc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Actual Travel ODC Cost for this Project</inlineHelpText>
        <label>ODC Cost, Travel</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_cost_ohd_fringe__c</fullName>
        <formula>rstk__pjwkb_proj__r.rstk__pjprojcst_cstohdfrng__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Actual Overhead Fringe Cost for this Project</inlineHelpText>
        <label>Ohd Cost, Fringe</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_cost_ohd_lab__c</fullName>
        <formula>rstk__pjwkb_proj__r.rstk__pjprojcst_cstohdlab__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Actual Overhead Labor Costs for this Project</inlineHelpText>
        <label>Ohd Cost, Lab</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_cost_ohd_mach__c</fullName>
        <formula>rstk__pjwkb_proj__r.rstk__pjprojcst_cstohdmach__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Actual Overhead Machine Cost for this Project</inlineHelpText>
        <label>Ohd Cost, Mach</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_cost_ohd_mtl__c</fullName>
        <formula>rstk__pjwkb_proj__r.rstk__pjprojcst_cstohdmtl__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Actual Overhead Material Costs for this Project</inlineHelpText>
        <label>Ohd Cost, Mtl</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_cost_sub_lab__c</fullName>
        <formula>rstk__pjwkb_proj__r.rstk__pjprojcst_cstsublab__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Actual Subcontract Labor Cost for this Project</inlineHelpText>
        <label>Sub Cost, Lab</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_cost_sub_mtl__c</fullName>
        <formula>rstk__pjwkb_proj__r.rstk__pjprojcst_cstsubmtl__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Actual Subcontract Material Cost for this Project</inlineHelpText>
        <label>Sub Cost, Mtl</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_costs_odc_label__c</fullName>
        <inlineHelpText>This is the Actual Other Direct Charges Cost for the Project</inlineHelpText>
        <label>Act Cost, ODC</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_costs_ohd_label__c</fullName>
        <inlineHelpText>This is the Actual Overhead Cost for the Project</inlineHelpText>
        <label>Act Cost, Overhead</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_costs_sub_label__c</fullName>
        <inlineHelpText>This is the Actual Subcontracted Costs for this Project</inlineHelpText>
        <label>Act Cost, Subcontract</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_costs_subtot__c</fullName>
        <formula>rstk__pjwkb_proj__r.rstk__pjprojcst_costs_subtot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Total Actual cost to date for this Project</inlineHelpText>
        <label>Subtotal, Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_costs_subtot_lab__c</fullName>
        <formula>rstk__pjwkb_proj__r.rstk__pjprojcst_cstlab__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Actual Labor Cost for this Project</inlineHelpText>
        <label>Cost Labor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_costs_subtot_label__c</fullName>
        <inlineHelpText>This is the Total Actual cost to date for this Project</inlineHelpText>
        <label>Act Cost, Sub-Total</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_costs_subtot_mtl__c</fullName>
        <formula>rstk__pjwkb_proj__r.rstk__pjprojcst_cstmtl__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Actual Material Cost for this Project</inlineHelpText>
        <label>Cost Material</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_costs_subtot_odc__c</fullName>
        <formula>rstk__pjwkb_cost_odc_indirect__c + rstk__pjwkb_cost_odc_service__c + rstk__pjwkb_cost_odc_travel__c + rstk__pjwkb_cost_odc_misc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Actual Other Direct Charge Cost for this Project</inlineHelpText>
        <label>Cost ODC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_costs_subtot_ohd__c</fullName>
        <formula>rstk__pjwkb_cost_ohd_mtl__c + rstk__pjwkb_cost_ohd_lab__c + rstk__pjwkb_cost_ohd_fringe__c + rstk__pjwkb_cost_ohd_mach__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Actual Overhead Cost for this Project</inlineHelpText>
        <label>Cost Overhead</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_costs_subtot_sub__c</fullName>
        <formula>rstk__pjwkb_cost_sub_mtl__c + rstk__pjwkb_cost_sub_lab__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Actual Subcontracted Costs for this Project</inlineHelpText>
        <label>Cost Subcontract</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_costs_tot__c</fullName>
        <formula>rstk__pjwkb_costs_subtot_mtl__c + rstk__pjwkb_costs_subtot_lab__c + rstk__pjwkb_costs_subtot_ohd__c + rstk__pjwkb_costs_subtot_sub__c + rstk__pjwkb_costs_subtot_odc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Total Actual cost for this Budget</inlineHelpText>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the division associated with this Project</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Project Workbench</relationshipLabel>
        <relationshipName>Project_Workbench</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_proj__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Project is a field on records where there are costs and/or inventory, including inventory balances, work orders, purchase orders and sales orders. This is used by make-to-order manufacturing companies that want to plan, cost, and inventory by a project.</inlineHelpText>
        <label>Project</label>
        <referenceTo>rstk__pjprojcst__c</referenceTo>
        <relationshipLabel>Project Workbench</relationshipLabel>
        <relationshipName>Project_Workbench</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_proj_master__c</fullName>
        <inlineHelpText>Project is a field on records where there are costs and/or inventory, including inventory balances, work orders, purchase orders and sales orders. This is used by make-to-order manufacturing companies that want to plan, cost, and inventory by a project.</inlineHelpText>
        <label>Project Master</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>Project Workbench</relationshipLabel>
        <relationshipName>Project_Workbench</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_projdesc__c</fullName>
        <inlineHelpText>This is the description of this Project</inlineHelpText>
        <label>Project Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_var_odc_indirect__c</fullName>
        <formula>rstk__pjwkb_cost_odc_indirect__c - rstk__pjwkb_budget_odc_indirect__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Variance (Actual minus Budget) of Indirect ODC Costs for this Project</inlineHelpText>
        <label>Variance, ODC Indirect</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_var_odc_label__c</fullName>
        <inlineHelpText>This is the Variance for Other Direct Charges Cost for this Project</inlineHelpText>
        <label>Variance, ODC</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_var_odc_misc__c</fullName>
        <formula>rstk__pjwkb_cost_odc_misc__c - rstk__pjwkb_budget_odc_misc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Variance (Actual minus Budget) of Miscellaneous ODC Costs for this Project</inlineHelpText>
        <label>Variance, ODC Misc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_var_odc_service__c</fullName>
        <formula>rstk__pjwkb_cost_odc_service__c - rstk__pjwkb_budget_odc_service__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Variance (Actual minus Budget) of Service ODC Costs for this Project</inlineHelpText>
        <label>Variance, ODC Service</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_var_ohd_fringe__c</fullName>
        <formula>rstk__pjwkb_cost_ohd_fringe__c - rstk__pjwkb_budget_ohd_fringe__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Variance (Actual minus Budget) of Overhead Fringe Cost for this Project</inlineHelpText>
        <label>Variance, Ohd Fringe</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_var_ohd_lab__c</fullName>
        <formula>rstk__pjwkb_cost_ohd_lab__c - rstk__pjwkb_budget_ohd_lab__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Variance (Actual minus Budget) of Overhead Labor Cost for this Project</inlineHelpText>
        <label>Variance, Ohd Lab</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_var_ohd_label__c</fullName>
        <inlineHelpText>This is the Variance for Overhead Costs for this Project</inlineHelpText>
        <label>Variance, Overhead</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_var_ohd_mach__c</fullName>
        <formula>rstk__pjwkb_cost_ohd_mach__c - rstk__pjwkb_budget_ohd_mach__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Variance (Actual minus Budget) of Overhead Machine Cost for this Project</inlineHelpText>
        <label>Variance, Ohd Mach</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_var_ohd_mtl__c</fullName>
        <formula>rstk__pjwkb_cost_ohd_mtl__c - rstk__pjwkb_budget_ohd_mtl__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Variance (Actual minus Budget) of Overhead Material Cost for this Project</inlineHelpText>
        <label>Variance, Ohd Mtl</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_var_ohd_travel__c</fullName>
        <formula>rstk__pjwkb_cost_odc_travel__c - rstk__pjwkb_budget_odc_travel__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Variance (Actual minus Budget) of Travel ODC Costs for this Project</inlineHelpText>
        <label>Variance, ODC Travel</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_var_othdirect__c</fullName>
        <formula>rstk__pjwkb_actothdirect__c -  rstk__pjwkb_budothdirect__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Other Direct Charge variance for this Project</inlineHelpText>
        <label>Variance, Other Direct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_var_prodrevenue__c</fullName>
        <formula>rstk__pjwkb_actprodrevenue__c -  rstk__pjwkb_budprodrevenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Product Revenue Variance for this Project</inlineHelpText>
        <label>Variance, Product Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_var_revenue__c</fullName>
        <formula>rstk__pjwkb_acttotrevenue__c -  rstk__pjwkb_budtotrevenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Revenue variance, Actual minus Budget for this Project</inlineHelpText>
        <label>Variance, Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_var_servrevenue__c</fullName>
        <formula>rstk__pjwkb_actservrevenue__c  - rstk__pjwkb_budservrevenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the  Service Revenue Variance for this Project</inlineHelpText>
        <label>Variance, Service Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_var_sub_lab__c</fullName>
        <formula>rstk__pjwkb_cost_sub_lab__c - rstk__pjwkb_budget_sub_lab__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Variance (Actual minus Budget) of Overhead Labor Cost for this Project</inlineHelpText>
        <label>Variance, Sub Lab</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_var_sub_mtl__c</fullName>
        <formula>rstk__pjwkb_cost_sub_mtl__c - rstk__pjwkb_budget_sub_mtl__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Variance (Actual minus Budget) of Subcontracted Material Cost for this Project</inlineHelpText>
        <label>Variance, Sub Mtl</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_var_subtot__c</fullName>
        <formula>rstk__pjwkb_costs_subtot__c -  rstk__pjwkb_budget_subtot__c</formula>
        <inlineHelpText>This is the Total Variance, Actual minus Budget, for this Project</inlineHelpText>
        <label>Variance, Sub Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_var_subtot_lab__c</fullName>
        <formula>rstk__pjwkb_costs_subtot_lab__c - rstk__pjwkb_budget_subtot_lab__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Labor Cost Variance for this Project</inlineHelpText>
        <label>Variance Labor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjwkb_var_subtot_label__c</fullName>
        <inlineHelpText>This is the Variance for Subcontracted Costs for this Project</inlineHelpText>
        <label>Variance, Sub-Total</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>